--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1925,7 +1925,7 @@
 		max-width: 20rem;
 		height: 3.75em;
 		line-height: 3.75em;
-		border-radius: 3.75em;
+		border-radius: 0.25em;
 		padding: 0 2.5em;
 		text-overflow: ellipsis;
 		overflow: hidden;
@@ -1957,7 +1957,7 @@
 			font-size: 0.6rem;
 			height: 3.325em;
 			line-height: 3.325em;
-			border-radius: 3.325em;
+			border-radius: 0.25em;
 			padding: 0 2em;
 		}
 
@@ -1969,7 +1969,7 @@
 			font-size: 0.8rem;
 			height: 4em;
 			line-height: 4em;
-			border-radius: 4em;
+			border-radius: 0.3em;
 			padding: 0 3em;
 		}
 
@@ -5652,6 +5652,185 @@
 	.spotlight.style3.invert.android .image:after {
 		background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='64px' height='32px' viewBox='0 0 64 32' zoomAndPan='disable'%3E%3Cstyle%3Erect %7Bfill: transparent%3B stroke: white%3B stroke-width: 1px%3B %7D%3C/style%3E%3Crect rx='4' ry='4' x='6' y='4' width='52' height='24' vector-effect='non-scaling-stroke' /%3E%3C/svg%3E");
 	}
+
+	/* Spotlight (style6) */
+	
+		.spotlight.style6 {
+			-moz-align-items: stretch;
+			-webkit-align-items: stretch;
+			-ms-align-items: stretch;
+			align-items: stretch;
+			display: -moz-flex;
+			display: -webkit-flex;
+			display: -ms-flex;
+			display: flex;
+			-moz-flex-direction: row;
+			-webkit-flex-direction: row;
+			-ms-flex-direction: row;
+			flex-direction: row;
+			-moz-justify-content: -moz-flex-end;
+			-webkit-justify-content: -webkit-flex-end;
+			-ms-justify-content: -ms-flex-end;
+			justify-content: flex-end;
+			position: relative;
+			overflow-x: hidden;
+			text-align: left;
+		}
+	
+			.spotlight.style6 .content {
+				padding: 7rem 7rem 5rem 7rem ;
+				-moz-align-self: center;
+				-webkit-align-self: center;
+				-ms-align-self: center;
+				align-self: center;
+				-moz-flex-grow: 1;
+				-webkit-flex-grow: 1;
+				-ms-flex-grow: 1;
+				flex-grow: 1;
+				-moz-flex-shrink: 1;
+				-webkit-flex-shrink: 1;
+				-ms-flex-shrink: 1;
+				flex-shrink: 1;
+				width: 65%;
+				max-width: 64rem;
+				margin: 0 auto;
+			}
+	
+			.spotlight.style6 .image {
+				-moz-flex-grow: 0;
+				-webkit-flex-grow: 0;
+				-ms-flex-grow: 0;
+				flex-grow: 0;
+				-moz-flex-shrink: 0;
+				-webkit-flex-shrink: 0;
+				-ms-flex-shrink: 0;
+				flex-shrink: 0;
+				width: 35%;
+				min-width: 25rem;
+				border-radius: 0;
+			}
+	
+				.spotlight.style6 .image img {
+					-moz-object-fit: cover;
+					-webkit-object-fit: cover;
+					-ms-object-fit: cover;
+					object-fit: cover;
+					-moz-object-position: center;
+					-webkit-object-position: center;
+					-ms-object-position: center;
+					object-position: center;
+					display: block;
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					border-radius: 0;
+
+				}
+	
+			@media screen and (max-width: 1680px) {
+	
+				.spotlight.style6 .content {
+					padding: 5rem 5rem 3rem 5rem ;
+				}
+	
+			}
+	
+			@media screen and (max-width: 1280px) {
+	
+				.spotlight.style6 .content {
+					padding: 4rem 4rem 2rem 4rem ;
+				}
+	
+			}
+	
+			@media screen and (max-width: 980px) {
+	
+				.spotlight.style6 .content {
+					padding: 3.75rem 3rem 1.75rem 3rem ;
+					width: 50%;
+					min-width: 0;
+				}
+	
+				.spotlight.style6 .image {
+					width: 50%;
+					min-width: 0;
+				}
+	
+			}
+	
+			@media screen and (max-width: 736px) {
+	
+				.spotlight.style6 .content {
+					padding: 2.5rem 2rem 0.5rem 2rem ;
+				}
+	
+			}
+	
+		@media screen and (max-width: 736px) and (orientation: portrait) {
+	
+			.spotlight.style6 {
+				-moz-flex-direction: column-reverse;
+				-webkit-flex-direction: column-reverse;
+				-ms-flex-direction: column-reverse;
+				flex-direction: column-reverse;
+				text-align: center !important;
+			}
+	
+				.spotlight.style6 .content {
+					width: 100%;
+				}
+	
+				.spotlight.style6 .image {
+					width: 100%;
+				}
+	
+					.spotlight.style6 .image img {
+						position: relative;
+					}
+	
+		}
+	
+			.spotlight.style6.orient-right {
+				-moz-flex-direction: row-reverse;
+				-webkit-flex-direction: row-reverse;
+				-ms-flex-direction: row-reverse;
+				flex-direction: row-reverse;
+			}
+	
+		@media screen and (max-width: 736px) and (orientation: portrait) {
+	
+			.spotlight.style6.orient-right {
+				-moz-flex-direction: column-reverse;
+				-webkit-flex-direction: column-reverse;
+				-ms-flex-direction: column-reverse;
+				flex-direction: column-reverse;
+			}
+	
+		}
+	
+			.spotlight.style6.content-align-center {
+				text-align: center;
+			}
+	
+			.spotlight.style6.content-align-right {
+				text-align: right;
+			}
+	
+			.spotlight.style6.image-position-left .image img {
+				-moz-object-position: left;
+				-webkit-object-position: left;
+				-ms-object-position: left;
+				object-position: left;
+			}
+	
+			.spotlight.style6.image-position-right .image img {
+				-moz-object-position: right;
+				-webkit-object-position: right;
+				-ms-object-position: right;
+				object-position: right;
+			}
 
 /* Gallery (transitions) */
 
